force-app/main/default/objects/inov8__PMT_Task__c/fields/inov8__Duration_In_Days__c.field-meta.xml
<CustomField>
    <fullName>inov8__Duration_In_Days__c</fullName>
    <label>Duration In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>