force-app/main/default/objects/inov8__PMT_Task__c/fields/inov8__Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>inov8__Phase_Name__c</fullName>
    <formula>inov8__Phase__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Name</label>
    <type>Text</type>
</CustomField>