force-app/main/default/objects/inov8__PMT_Task__c/fields/inov8__Start_Days_Out__c.field-meta.xml
<CustomField>
    <fullName>inov8__Start_Days_Out__c</fullName>
    <label>Start Days Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>