force-app/main/default/objects/inov8__PMT_Task__c/listViews/inov8__All_Template_Tasks.listView-meta.xml
<ListView>
    <fullName>inov8__All_Template_Tasks</fullName>
    <columns>NAME</columns>
    <columns>inov8__Phase__c</columns>
    <columns>inov8__Percentage_Completion__c</columns>
    <columns>inov8__Assigned_To1__c</columns>
    <columns>inov8__Start_Date__c</columns>
    <columns>inov8__Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inov8__IsTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Template Tasks</label>
</ListView>